syntax = "proto3";
package demoonechain.citizen;

option go_package = "demo-onechain/x/citizen/types";

message Approval {
  string citizenId = 1; 
  string operator = 2; 
  
}

