syntax = "proto3";
package demoonechain.citizen;

option go_package = "demo-onechain/x/citizen/types";

message CitizensOwned {
  string owner = 1; 
  repeated string citizenIds = 2; 
  
}

